fixed color contrast issues in dark mode; updated doc

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -418,7 +418,7 @@ section.eqno > span {
 }
 #sidebar-doc-list a[aria-current="true"],
 #sidebar-doc-list a[aria-current="true"]:hover {
-	@apply rounded border-none bg-primary-300/30 px-2 font-medium text-primary-700 hover:no-underline dark:bg-primary-500/10 dark:text-primary-200;
+	@apply rounded border-none bg-primary-300/30 px-2 font-medium text-primary-700 hover:no-underline dark:bg-primary-500/20 dark:text-primary-100;
 }
 #sidebar-doc-list .accordion > div {
 	@apply ml-2 grid border-l-2 border-zinc-200 pl-1 opacity-0 dark:border-zinc-800;
